Fixed Top button overlap with T&C about t-shirts

--- a/css/styles.css
+++ b/css/styles.css
@@ -491,7 +491,7 @@ label{
 	border-bottom: 1px solid #ccc;
 }
 .c-footer-top .c-to-top-button{
-	margin-top: -30px;
+	margin-top: -15px;
 }
 .c-footer-bottom ul{
 	padding: 0px;
